# LearnAndroid

./: .gitignore  Readme.md  build.gradle  config.properties  gradle.properties  miniapp.gradle  settings.gradle  tools.gradle
aireminder/: build.gradle
aireminder/src/main/: AndroidManifest.xml
aireminder/src/main/res/layout/: activity_main.xml  list_item.xml
aireminder/src/main/res/values/: strings.xml
androidp/: build.gradle
androidp/src/main/: AndroidManifest.xml
androidp/src/main/res/layout/: activity_subscription.xml  dialog_tryfree.xml
androidp/src/main/res/values/: attrs.xml  strings.xml  styles.xml
androidp/src/main/res/values-v23/: styles.xml
androidp/src/main/res/values-v28/: styles.xml
androidservices/: build.gradle
androidservices/src/main/: AndroidManifest.xml
androidservices/src/main/res/layout/: activity_main.xml
animation/: build.gradle
animation/src/main/res/layout/: activity_main.xml
appwidget/: build.gradle
appwidget/android/example/: NumberPicker.kt  NumberPickerButton.kt
appwidget/appwidget/: Alarm.kt  CountdownTask.kt  CountdownTimerAppWidgetProvider.kt  CountdownTimerService.kt  NewTimerActivity.kt  SettingsActivity.kt  Timer.kt  TimerSpinnerAdapter.kt
appwidget/src/main/: AndroidManifest.xml
audioprocessing/: CMakeLists.txt  build.gradle
audioprocessing/src/main/: AndroidManifest.xml
audioprocessing/src/main/cpp/: TypeConversion.cpp
bluetooth/: build.gradle.kts
bluetooth/src/main/: AndroidManifest.xml
buildflavours/: build.gradle
buildflavours/src/main/: AndroidManifest.xml
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
camera2/: build.gradle
camera2/src/main/: AndroidManifest.xml
camerax/: build.gradle
camerax/src/main/: AndroidManifest.xml
canvas/: build.gradle
canvas/src/main/: AndroidManifest.xml
compose-animations/: build.gradle
dagger2/: build.gradle
dagger2/src/main/: AndroidManifest.xml
device/: build.gradle
deviceuniqueid/: build.gradle
deviceuniqueid/src/main/: AndroidManifest.xml
ffmpeg0_3_4_5_2016/: build.gradle
ffmpeg0_3_4_5_2016/src/main/: AndroidManifest.xml
ffmpeg0_3_4_5_2016/src/main/cpp/: CMakeLists.txt  andlogs.h  cmdutils.c  config.h  config_arm.h  config_x86.h  ffmpeg.c  ffmpeg.h  ffmpegJNI.c  ffmpegJNI.h
ffmpegjni/: FFmpegJNI.kt  build.gradle
ffmpegjni/src/main/: AndroidManifest.xml
ffmpegjni/src/main/cpp/: .fuse_hidden0004da6c0000000e  CMakeLists.txt  CMakeLists1.txt  andlogs.h  cmdutils.c  cmdutils.h  config.h  config_arm.h  config_arm64v8a.h  config_x86.h  ffmpeg.c  ffmpeg.h  ffmpegJNI.c  ffmpegJNI.h  ffprobe.c  ffprobe.h  ffprobeJNI.c  ffprobeJNI.h  native-lib.cpp  native-lib.h
ffmpegjni/src/main/cpp/prebuilt/armeabi-v7a/lib/pkgconfig/: libavfilter.pc
ffmpegjni/src/main/cpp/prebuilt/include/libavcodec/: aacps_tablegen  cbrt_fixed_tables.h  cbrt_tablegen  dv_tablegen  motionpixels_tablegen  pcm_tablegen  qdm2_tablegen  sinewin_fixed_tablegen  sinewin_tablegen
ffmpegjni/src/main/cpp/prebuilt/include/libavdevice/: libavdevice.pc
ffmpegjni/src/main/cpp/prebuilt/include/libswscale/: libswscale.pc
ffmpegso/: build.gradle
ffmpegso/src/main/: AndroidManifest.xml
ffmpegso/src/main/cpp/: CMakeLists.txt  cmdutils.c  cmdutils.h  config.h  ffmpeg.c  ffmpeg.h  ffmpegJNI.c  ffmpegJNI.h  ffmpeg_filter.c  ffmpeg_opt.c
ffmpegso/src/main/cpp/lib/include/libavutil/: ffversion.h
flexbox/: build.gradle.kts
fontfamily/: build.gradle
fontfamily/src/main/: AndroidManifest.xml
gameframework/: build.gradle
gameframework/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
hijricalendar/: build.gradle
hijricalendar/src/main/: AndroidManifest.xml
launchmode/: Readme.md  build.gradle
launchmode/src/main/: AndroidManifest.xml
mediaapi/: build.gradle
mediaapi/src/main/: AndroidManifest.xml
mediaeffectswithopengles/: Readme.md  build.gradle
mediaeffectswithopengles/src/main/: AndroidManifest.xml
mediamuxer/: build.gradle
mediamuxer/src/main/: AndroidManifest.xml
mediasdk/: build.gradle
mediasdk/src/main/: AndroidManifest.xml
mediax/: build.gradle
mediax/src/main/: AndroidManifest.xml
moshi/: build.gradle
motionlayout/: build.gradle
motionlayout/src/main/: AndroidManifest.xml
mrnom/: build.gradle
mrnom/src/main/: AndroidManifest.xml
oldnavigation/: build.gradle
opeglesgame/: build.gradle
opeglesgame/src/main/: AndroidManifest.xml
pdf/: build.gradle
pdf/src/main/: AndroidManifest.xml
players/: build.gradle
players/src/main/: AndroidManifest.xml
preferencesample/: build.gradle
preferencesample/src/main/: AndroidManifest.xml
processbuilderex/: CMakeLists.txt  build.gradle
processbuilderex/src/main/: AndroidManifest.xml
processbuilderex/src/main/cpp/: native-lib.cpp  native-lib.h
removeorientationtest/: build.gradle
removeorientationtest/src/main/: AndroidManifest.xml
retrosquashgame/: build.gradle
retrosquashgame/src/main/: AndroidManifest.xml
shadersNfilters/: Readme.md  build.gradle  proguard-rules.pro
shadersNfilters/src/main/: AndroidManifest.xml
snake/: build.gradle
snake/src/main/: AndroidManifest.xml
socketio/: build.gradle
socketio/src/main/: AndroidManifest.xml
tencent-miniapp/: .gitignore  build.gradle
tencent-miniapp/src/main/: AndroidManifest.xml
testcode/: build.gradle
testcode/src/main/: AndroidManifest.xml
testframework/: build.gradle
testframework/src/main/: AndroidManifest.xml
testframework/src/main/assets/: awesome.txt
tutsopengles/: CMakeLists.txt  build.gradle  proguard-rules.pro
tutsopengles/src/main/: AndroidManifest.xml
tutsopengles/src/main/cpp/: Lighting.cpp  Matrix.cpp  Matrix.h  NormalMapping.cpp  Texture.cpp  Texture.h  common.cpp  common.h  native-lib.cpp  native-lib.h  simplecube.cpp  simplecube.h  simpletriangle.cpp  simpletriangle.h
verticaledittext/: build.gradle
verticaledittext/src/main/: AndroidManifest.xml
webviewfeatures/: build.gradle
webviewfeatures/src/main/: AndroidManifest.xml
widgets/: build.gradle
widgets/src/main/: AndroidManifest.xml
(+890 files in other folders)
